:sparkles: Feature done

--- a/src/assets/css/meraki.scss
+++ b/src/assets/css/meraki.scss
@@ -57,6 +57,7 @@
         &__input {
             padding-bottom: 0px !important;
             font-size: 12px !important;
+            margin-right: 8px;
 
             .mat-form-field-wrapper {
                 padding: 0px !important;
