--- a/src/app/main/pages/spares/improvements/improvements.component.html
+++ b/src/app/main/pages/spares/improvements/improvements.component.html
@@ -1,65 +1,183 @@
 <div class="ms-container">
   <div class="ms-toolbar">
     <mat-icon class="ms-toolbar__icon">turned_in</mat-icon>
-    <h1 class="ms-toolbar__title" [ngClass]="isMobile ? 'ms-toolbar__title--mobile' : 'ms-toolbar__title--desktop'">
-      Mejoras</h1>
-    <button mat-stroked-button class="ms-toolbar__button" (click)="openDialog('create')"
+    <h1
+      class="ms-toolbar__title"
+      [ngClass]="
+        isMobile ? 'ms-toolbar__title--mobile' : 'ms-toolbar__title--desktop'
+      "
+    >
+      Mejoras
+    </h1>
+    <button
+      mat-stroked-button
+      class="ms-toolbar__button"
+      (click)="openDialog('create')"
       *ngIf="authService.uiConfig.spareParts.improvements.toolbar.create"
-      [ngClass]="isMobile ? 'ms-toolbar__button--mobile' : 'ms-toolbar__button--desktop'">
+      [ngClass]="
+        isMobile ? 'ms-toolbar__button--mobile' : 'ms-toolbar__button--desktop'
+      "
+    >
       <mat-icon>add</mat-icon>
       CREAR
     </button>
-    <mat-form-field appearance="outline" class="ms-toolbar__input"
-      [ngClass]="isMobile ? 'ms-toolbar__input--mobile' : 'ms-toolbar__input--desktop'">
+    <mat-form-field
+      appearance="outline"
+      class="ms-toolbar__input"
+      [ngClass]="
+        isMobile ? 'ms-toolbar__input--mobile' : 'ms-toolbar__input--desktop'
+      "
+    >
       <mat-label>Buscar</mat-label>
       <mat-icon matPrefix>search</mat-icon>
-      <input matInput type="text" [formControl]="searchControl" placeholder="Escribir..." autocomplete="off">
+      <input
+        matInput
+        type="text"
+        [formControl]="searchControl"
+        placeholder="Escribir..."
+        autocomplete="off"
+      />
+    </mat-form-field>
+    <mat-form-field
+      appearance="outline"
+      class="ms-toolbar__input"
+      [ngClass]="
+        isMobile ? 'ms-toolbar__input--mobile' : 'ms-toolbar__input--desktop'
+      "
+    >
+      <mat-label>Estado</mat-label>
+      <mat-select [formControl]="stateControl">
+        <mat-option value="">Todos</mat-option>
+        <mat-option value="registered">Registrado</mat-option>
+        <mat-option value="replacement">Reemplazo</mat-option>
+        <mat-option value="validated">Validado</mat-option>
+      </mat-select>
     </mat-form-field>
     <span class="ms-fill"></span>
-    <button mat-stroked-button class="ms-toolbar__button" [routerLink]="['/main/replacements']"
-      [ngClass]="isMobile ? 'ms-toolbar__button--mobile' : 'ms-toolbar__button--desktop'">
+    <button
+      mat-stroked-button
+      class="ms-toolbar__button"
+      [routerLink]="['/main/replacements']"
+      [ngClass]="
+        isMobile ? 'ms-toolbar__button--mobile' : 'ms-toolbar__button--desktop'
+      "
+    >
       <mat-icon>launch</mat-icon>
       Ir a reemplazos
     </button>
   </div>
   <mat-divider></mat-divider>
 
-  <div *ngIf="improvement$ |async; else default" class="body-container mat-elevation-z4">
-    <table mat-table [dataSource]="improvementDataSource" matSort (matSortChange)="sortData($event)">
-
+  <div
+    *ngIf="improvement$ | async; else default"
+    class="body-container mat-elevation-z4"
+  >
+    <table
+      mat-table
+      [dataSource]="improvementDataSource"
+      matSort
+      (matSortChange)="sortData($event)"
+    >
       <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef class="ms-table__header" mat-sort-header> Fecha </th>
-        <td mat-cell *matCellDef="let element" class="ms-table__header"> {{(element.date.seconds * 1000) | date :
-          'dd/MM/yy'}} </td>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          class="ms-table__header"
+          mat-sort-header
+        >
+          Fecha
+        </th>
+        <td mat-cell *matCellDef="let element" class="ms-table__header">
+          {{ element.date.seconds * 1000 | date: "dd/MM/yy" }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef class="ms-table__header" mat-sort-header> Nombre de Mejora </th>
-        <td mat-cell *matCellDef="let element" class="ms-table__header"> {{element.name}} </td>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          class="ms-table__header"
+          mat-sort-header
+        >
+          Nombre de Mejora
+        </th>
+        <td mat-cell *matCellDef="let element" class="ms-table__header">
+          {{ element.name }}
+        </td>
       </ng-container>
       <ng-container matColumnDef="component">
-        <th mat-header-cell *matHeaderCellDef class="ms-table__header" mat-sort-header> Componente </th>
-        <td mat-cell *matCellDef="let element" class="ms-table__header"> {{element.component}} </td>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          class="ms-table__header"
+          mat-sort-header
+        >
+          Componente
+        </th>
+        <td mat-cell *matCellDef="let element" class="ms-table__header">
+          {{ element.component }}
+        </td>
       </ng-container>
       <ng-container matColumnDef="model">
-        <th mat-header-cell *matHeaderCellDef class="ms-table__header" mat-sort-header> Modelo </th>
-        <td mat-cell *matCellDef="let element" class="ms-table__header"> {{element.model}} </td>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          class="ms-table__header"
+          mat-sort-header
+        >
+          Modelo
+        </th>
+        <td mat-cell *matCellDef="let element" class="ms-table__header">
+          {{ element.model }}
+        </td>
       </ng-container>
       <ng-container matColumnDef="criticalPart">
-        <th mat-header-cell *matHeaderCellDef class="ms-table__header" mat-sort-header> Mejora critica </th>
-        <td mat-cell *matCellDef="let element" class="ms-table__header"> {{element.criticalPart ? 'Si':'No'}} </td>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          class="ms-table__header"
+          mat-sort-header
+        >
+          Mejora critica
+        </th>
+        <td mat-cell *matCellDef="let element" class="ms-table__header">
+          {{ element.criticalPart ? "Si" : "No" }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="createdBy">
-        <th mat-header-cell *matHeaderCellDef class="ms-table__header" mat-sort-header> Usuario </th>
-        <td mat-cell *matCellDef="let element" class="ms-table__header"> {{element.createdBy.name}} </td>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          class="ms-table__header"
+          mat-sort-header
+        >
+          Usuario
+        </th>
+        <td mat-cell *matCellDef="let element" class="ms-table__header">
+          {{ element.createdBy.name }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="state">
-        <th mat-header-cell *matHeaderCellDef class="ms-table__header" mat-sort-header> Estado </th>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          class="ms-table__header"
+          mat-sort-header
+        >
+          Estado
+        </th>
         <td mat-cell *matCellDef="let element" class="ms-table__header">
-          <button mat-button (click)="showImprovementEntry(element)"
-            [ngClass]="{'btn-state-register': element.state==='registered','btn-state-validate': element.state==='validated','btn-state-replacement': element.state==='replacement'}">
+          <button
+            mat-button
+            (click)="showImprovementEntry(element)"
+            [ngClass]="{
+              'btn-state-register': element.state === 'registered',
+              'btn-state-validate': element.state === 'validated',
+              'btn-state-replacement': element.state === 'replacement'
+            }"
+          >
             <span *ngIf="element.state === 'registered'">Registrado</span>
             <span *ngIf="element.state === 'replacement'">Reemplazo</span>
             <span *ngIf="element.state === 'validated'">Validado</span>
@@ -74,25 +192,51 @@
         <td mat-cell *matCellDef="let element; let i = index">
           <ng-container>
             <mat-menu #rawMenu="matMenu">
-              <button class="w3-small" mat-menu-item
-                *ngIf="(element.state==='validated' || element.state==='registered') && authService.uiConfig.spareParts.improvements.actions.validate"
-                (click)="openDialog('validate', element, i)">
+              <button
+                class="w3-small"
+                mat-menu-item
+                *ngIf="
+                  (element.state === 'validated' ||
+                    element.state === 'registered') &&
+                  authService.uiConfig.spareParts.improvements.actions.validate
+                "
+                (click)="openDialog('validate', element, i)"
+              >
                 <mat-icon>check_circle</mat-icon>
                 Validar
               </button>
-              <button class="w3-small" mat-menu-item
-                *ngIf="element.state==='replacement' && authService.uiConfig.spareParts.improvements.actions.replace"
-                (click)="openDialog('replacement', element, i)">
+              <button
+                class="w3-small"
+                mat-menu-item
+                *ngIf="
+                  element.state === 'replacement' &&
+                  authService.uiConfig.spareParts.improvements.actions.replace
+                "
+                (click)="openDialog('replacement', element, i)"
+              >
                 <mat-icon>published_with_changes</mat-icon>
                 Reemplazo
               </button>
-              <button class="w3-small" mat-menu-item (click)="openDialog('edit', element, i)"
-                *ngIf="authService.uiConfig.spareParts.improvements.actions.edit">
+              <button
+                class="w3-small"
+                mat-menu-item
+                (click)="openDialog('edit', element, i)"
+                *ngIf="
+                  authService.uiConfig.spareParts.improvements.actions.edit
+                "
+              >
                 <mat-icon>edit</mat-icon>
                 Editar
               </button>
-              <button *ngIf="element.state==='registered' && authService.uiConfig.spareParts.improvements.actions.delete" class="w3-small" mat-menu-item
-                (click)="openDialog('delete',element,i)">
+              <button
+                *ngIf="
+                  element.state === 'registered' &&
+                  authService.uiConfig.spareParts.improvements.actions.delete
+                "
+                class="w3-small"
+                mat-menu-item
+                (click)="openDialog('delete', element, i)"
+              >
                 <mat-icon>delete</mat-icon>
                 Borrar
               </button>
@@ -106,9 +250,17 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="improvementDisplayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: improvementDisplayedColumns;"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: improvementDisplayedColumns"
+      ></tr>
     </table>
-    <mat-paginator #improvementPaginator class="ms-paginator" [pageSizeOptions]="[20, 30, 40]" showFirstLastButtons>
+    <mat-paginator
+      #improvementPaginator
+      class="ms-paginator"
+      [pageSizeOptions]="[20, 30, 40]"
+      showFirstLastButtons
+    >
     </mat-paginator>
   </div>
   <ng-template #default>
