--- a/src/app/main/pages/spares/improvements/dialogs/replacement-dialog-improvements/replacement-dialog-improvements.component.scss
+++ b/src/app/main/pages/spares/improvements/dialogs/replacement-dialog-improvements/replacement-dialog-improvements.component.scss
@@ -1,61 +1,67 @@
 .container-form {
-    &__description {
-        display: flex;
+  &__description {
+    display: flex;
 
-        &--inputs {
-            display: flex;
-            flex-direction: column;
-            margin-right: 20px;
-        }
+    &--inputs {
+      display: flex;
+      flex-direction: column;
+      margin-right: 20px;
     }
+  }
 
-    &__checked {
-        display: flex;
-        &--input {
-            margin-right: 20px;
-        }
-        &--date {
-            margin-right: 50px;
-        }
-        &--cheked {
-            display: flex;
-            margin: 18px 0;
-        }
+  &__checked {
+    display: flex;
+    &--input {
+      margin-right: 20px;
     }
+    &--date {
+      margin-right: 50px;
+    }
+    &--cheked {
+      display: flex;
+      margin: 18px 0;
+    }
+  }
+}
+
+.comments {
+  display: block;
+  max-width: 654px;
+  margin-bottom: 12px;
 }
 
 .checked-margin {
-    margin: 0 12px;
+  margin: 0 12px;
 }
 
 .container-form-array {
+  display: flex;
+  &__inputs {
+    margin-right: 20px;
+  }
+  &__checked {
     display: flex;
-    &__inputs {
-        margin-right: 20px;
-    }
-    &__checked {
-        display: flex;
-        margin: 18px 0;
-    }
+    margin: 18px 0;
+  }
 }
 
 .footer__btn-close {
-    color: #b00020;
-    border: 1px solid #b00020;
-    margin-right: 20px;
-    padding: 0px 30px 0px 30px;
+  color: #b00020;
+  border: 1px solid #b00020;
+  margin-right: 20px;
+  padding: 0px 30px 0px 30px;
 }
 .footer__btn-save {
-    background: #6200ee;
-    color: white;
-    padding: 0px 30px 0px 30px;
+  background: #6200ee;
+  color: white;
+  padding: 0px 30px 0px 30px;
 }
 
 .generate-replacement {
-    width: 20px;
-    height: 20px;
-    background-color: orangered;
-    border: solid 2px orange;
-    border-radius: 12px;
-    align-self: center;
+  width: 20px;
+  height: 20px;
+  background-color: orangered;
+  border: solid 2px orange;
+  border-radius: 12px;
+  align-self: center;
 }
