--- a/src/app/main/pages/spares/improvements/dialogs/show-dialog-improvements/show-dialog-improvements.component.sass
+++ b/src/app/main/pages/spares/improvements/dialogs/show-dialog-improvements/show-dialog-improvements.component.sass
@@ -19,6 +19,11 @@
             display: flex
             margin: 18px 0
 
+.comments 
+  display: block
+  max-width: 654px
+  margin-bottom: 12px
+
 .checked-margin
     margin: 0 12px
 
